page titles no longer cut off by website title

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -76,16 +76,36 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-tint: #f5f6f9;
 }
 
-/*
+
+ion-content > ion-title {
+  --background: #f0ffff;
+  margin-top: 50px;
+}
+
+.HomePage {
+  --background: #ff0000;
+}
+
 ion-toast {
   --background: #ff0000;
 }
 
 ion-button {
-  --background: #ff0000;
   --outline: #000000;
   --border-radius: 0;
-}*/
+}
+
+ion-app > ion-header > ion-item {
+  --background: #ffff00;
+}
+
+ion-page {
+  --background: #00ff00;
+}
+
+ion-header {
+  --background: #00ff00;
+}
 
 @media (prefers-color-scheme: dark) {
   /*
